cluster/apps/ha-route/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ha-service
  namespace: media
  labels:
    kubernetes.io/service-name: ha-service
addressType: IPv4
endpoints:
  - addresses:
      - "10.1.15.115"
    conditions:
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ha-observer-service
  namespace: media
  labels:
    kubernetes.io/service-name: ha-observer-service
addressType: IPv4
endpoints:
  - addresses:
      - "10.1.15.115"
    conditions:
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 4357
