cluster/apps/ha-route/manual-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-service
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: ha-proxy
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: ha-observer-service
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: ha-observer-proxy
  ports:
    - protocol: TCP
      port: 4357
      targetPort: 4357
