cluster/apps/ha-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-route
  namespace: media
  annotations:
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/description: Home Assistant
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: sh-home-assistant
    gethomepage.dev/name: Home Assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - ha.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove:
              - X-Forwarded-For
      backendRefs:
        - group: ""
          kind: Service
          name: ha-service
          port: 8123
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-observer-route
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - ha-observer.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove:
              - X-Forwarded-For
      backendRefs:
        - group: ""
          kind: Service
          name: ha-observer-service
          port: 4357
          weight: 1
